[package]
name = "scryers"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "A simple alternative to Scryfall with caching and mass image downloading capabilities."
homepage = "https://github.com/KyleMiles/scryrs"
documentation = "https://github.com/KyleMiles/scryrs"
repository = "https://github.com/KyleMiles/scryrs"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
lazy_static = "1.4.0"
reqwest = { version = "0.11.27", features = ["json", "blocking"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
